syntax = "proto3";

option go_package = "github.com/tkr-ld/grpc-weather";

package weather;

service WeatherService {
    rpc GetWeather(GetRequest) returns (WeatherResponse);
}

message GetRequest {
    int32 number = 1;
}

message WeatherResponse {
    WeatherType weather = 1;
}

enum WeatherType {
    UNKNOWN = 0;
    SUNNY = 1;
    CLOUDY = 2;
    RAIN = 3;
}